--- a/spin.toml
+++ b/spin.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 [[component]]
 id = "wasm-poc"
 source = "main.wasm"
-allowed_http_hosts = [raw.githubusercontent.com]
+allowed_http_hosts = ["raw.githubusercontent.com"]
 [component.trigger]
 route = "/..."
 [component.build]
